trunk/Archive2/ff/2b0010d509a088/output
main.cpp: In function 'int main()':
main.cpp:40:15: error: conversion from 'int' to non-scalar type 'tuple {aka std::tuple<int, double, int>}' requested
     tuple v = 1;
               ^
